# gongkao-analysis

./: .gitignore  README.md  analysis.py  main.py  pyproject.toml
gongkao/省考/: 上海.csv  天津.csv  宁夏.csv  山东.csv  新疆.csv  海南.csv  西藏.csv  青海.csv
