[project]
name = "gongkao-analysis"
version = "0.1.0"
description = "公务员考试数据分析：基于 pandas + matplotlib 对国考/省考 83 万条职位数据进行多维度分析"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
